--- a/testHTML/scaleMaker.html
+++ b/testHTML/scaleMaker.html
@@ -11,15 +11,15 @@
 		</script>
 
 		Key: <input type="text" id='key' />
-		
+
 		<button id='submit'>submit</button>
 
 		<p id = 'parent'>
-        <canvas width="140" height="84" id='mainCanvas'></canvas>
+        <div width="140" height="84" id='mainCanvas' class='streamHolding'></div>
         <p/>
-        
+
         <button id='playButton'>play</button>
-        
+
 	</body>
 
 </html>
