--- a/testHTML/testModules.html
+++ b/testHTML/testModules.html
@@ -13,13 +13,13 @@
     </section>
 
     <script>
-      // script only runs browsers that don't support modules (ideally)
-      document.querySelector('.nosupport').hidden = true;
-    </script>
+    // script only runs browsers that support modules (ideally)
+document.querySelector('.nosupport').hidden = true;
+</script>
     <script nomodule>
-      // script only runs browsers that don't support modules (ideally)
-      document.querySelector('.nosupport').hidden = false;
-    </script>
+    // script only runs browsers that don't support modules (ideally)
+document.querySelector('.nosupport').hidden = false;
+</script>
 
 </body>
 </html>
