small changes to meter, pitch, roman, tie

--- a/testHTML/testModules.html
+++ b/testHTML/testModules.html
@@ -7,7 +7,7 @@
   <body>
 
 
-    <section class="nosupport" hidden>
+    <section class="nosupport" hidden="1">
       <h4>Apologies.. your browser doesn't support ES Modules. </h4>
       <p>You <a href="https://github.com/paulirish/es-modules-todomvc#readme">may be able to enable them with a flag</a>.
     </section>
