--- a/testHTML/demo-Cuthbert.html
+++ b/testHTML/demo-Cuthbert.html
@@ -2,8 +2,7 @@
 <html xmlns = "http://www.w3.org/1999/xhtml">
 <head>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <script data-main="../src/music21.js" src="../ext/require/require.js"></script>
-
+ <script src="../build/music21.debug.js"></script>
 </head>
 <body>
 <script type="text/javascript">
@@ -54,7 +53,7 @@ function renderIt() {
     newStream.replaceDOM();
 }
 
-require(['music21'], drawMe);
+drawMe();
 
 </script>
 </body>
