--- a/testHTML/recordAudio.html
+++ b/testHTML/recordAudio.html
@@ -44,7 +44,7 @@
 <div>
 	<button onclick="toggleRecording(this)">Record</button>
 	<button onclick="save()">Save</button>
-	<a href="#" id="save">hi</a>
+	<a href="#" id="save">Download</a>
 </div>
 <div>
     <canvas id="frequencyAnalyser" width="256" height="50"></canvas>
