--- a/testHTML/requireTest.html
+++ b/testHTML/requireTest.html
@@ -3,20 +3,20 @@
 	 <title>Require Test for Music21j</title>
 	 <script data-main="../src/music21" src="../ext/require/require.js"></script>
      <script>
-     require(['music21'], function() {
-    var n = new music21.note.Note('B4');
-    n.duration.type = 'half';
-    var n2 = new music21.chord.Chord(['F#4', 'A#4', 'C5']);
-    n2.duration.type = 'half';
-    var s = new music21.stream.Stream();
-    s.append(n);
-    s.append(n2);
-    // s.clef = new music21.clef.Clef('treble');
+     require(['music21'], function(music21) {
+		var n = new music21.note.Note('B4');
+		n.duration.type = 'half';
+		var n2 = new music21.chord.Chord(['F#4', 'A#4', 'C5']);
+		n2.duration.type = 'half';
+		var s = new music21.stream.Stream();
+		s.append(n);
+		s.append(n2);
+		// s.clef = new music21.clef.Clef('treble');
 
-    var k = new music21.key.Key('C#');
-    s.keySignature = k;
-    s.appendNewDOM();
-});
+		var k = new music21.key.Key('C#');
+		s.keySignature = k;
+		s.appendNewDOM();
+	});
 </script>
 	</head>
 	<body>
