--- a/testHTML/showKeyboard.html
+++ b/testHTML/showKeyboard.html
@@ -98,7 +98,7 @@
 		}
 		
 		
-		require(['music21'], function () { 	
+		require(['music21'], function (music21) {
 		    p = new music21.stream.Part();
 		    // p.renderOptions.width = 500;
 		    m = new music21.stream.Measure();
