--- a/testHTML/crossSiteTest.html
+++ b/testHTML/crossSiteTest.html
@@ -1,7 +1,7 @@
 <html><head>
    <script data-main="//localhost:8000/src/music21" src="//localhost:8000/ext/require/require.js"></script>
    <script>
-   require(['music21'], function () {
+   require(['music21'], function (music21) {
        var n = new music21.note.Note("F#");
        var s = new music21.stream.Stream();
        s.append(n);
