--- a/testHTML/m21jSandbox.html
+++ b/testHTML/m21jSandbox.html
@@ -37,7 +37,7 @@
   var msg = "";
 
   window.onload = function () {
-	  require(['music21'], function() { 
+	  require(['music21'], function(music21) {
 	     mainSVG = $("#mainSVG")[0];         
          msg = $('div.editor-error .text');
          live_code();
