--- a/testHTML/renderTinyNotationDivs.html
+++ b/testHTML/renderTinyNotationDivs.html
@@ -1,36 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns = "http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
  <title>21M.051 Note changer</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <script data-main="../src/music21"
         m21conf='{"loadSoundfont": true }'
         warnBanner="no"
-        src="../ext/require/require.js"></script>
+        src="../ext/require/require.js" type="application/javascript"></script>
  <link rel="stylesheet" href="http://web.mit.edu/music21/doc/_static/m21.css" type="text/css" />
  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
 </head>
 <body>
 
-<script>
-
-require(['music21'], function() {
-	var s = music21.tinyNotation.TinyNotation("G2 B4 c4");
-	s.clef = new music21.clef.Clef('bass');
-	var d = s.editableAccidentalDOM();
-
-	$("#editable").append(d);
-	$("#editable").append( $("<br clear='all'/>") );
-
-	var s2 = music21.tinyNotation.TinyNotation("a2 b4 c'4");
-	s2.clef = new music21.clef.Clef('treble');
-	var d2 = s.editableAccidentalDOM();
-	$("#editable").append(d2);
-});
-
-
-
-</script>
 <div class="related">
 	<ul><li><a href="#">21m.051 Cuthbert</a> &raquo; <a href="#">Intervals</a></li></ul>
 </div>
@@ -67,6 +48,22 @@ set <code>class=""music21 tinyNotation"</code> or
 
 <div>Here is a multipart tinyNotation with the <code>partBreak</code> code</div>
 <div class="music21 tinyNotation">g2 f2 partBreak C4 D8 E8 F2</div>
+
+<script type="application/javascript">
+require(['music21'], function(music21) {
+	var s = music21.tinyNotation.TinyNotation("G2 B4 c4");
+	s.clef = new music21.clef.Clef('bass');
+	var d = s.editableAccidentalDOM();
+    var editable = $("#editable");
+	editable.append(d);
+	editable.append( $("<br clear='all'/>") );
+
+	var s2 = music21.tinyNotation.TinyNotation("a2 b4 c'4");
+	s2.clef = new music21.clef.Clef('treble');
+	var d2 = s2.editableAccidentalDOM();
+	editable.append(d2);
+});
+</script>
 
 </body>
 </html>
