--- a/testHTML/xyLocation.html
+++ b/testHTML/xyLocation.html
@@ -3,10 +3,22 @@
         <title>XY Location!</title>
         <!-- for MSIE 10 on Windows 8 -->
         <meta http-equiv="X-UA-Compatible" content="requiresActiveX=true"/>
-        <script data-main="../src/music21.js" src="../ext/require/require.js"></script>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<style>
+#svg { background-color: #ffffaa }
+</style>
+</head>
+<body>
+<div id='svg'></div>
+<div>
+X: <input type="text" name="xLoc" id="xLoc" value="0"/>
+Y: <input type="text" name="yLoc" id="yLoc" value="0"/>
+X-left: <input type="text" name="xOff" id="xOff" value="0"/>
+Y-top: <input type="text" name="yOff" id="yOff" value="0"/>
+
+</div>
+        <script src="../build/music21.debug.js"></script>
         <script>
-require(['music21'], function() {
     var s1 = music21.tinyNotation.TinyNotation(
         "4/4 c2 d#4 e8 f g4 r8 B c4~ c16 d32 e f g a b c'1 b4 a g f e8 f e d c4 B c1"
     );
@@ -38,7 +50,7 @@ require(['music21'], function() {
     };
     g.appendNewDOM();
 
-    music21.miditools.loadSoundfont('acoustic_grand_piano', function() {
+    music21.miditools.loadSoundfont('acoustic_grand_piano', () => {
         var $svg = $('#svg');
         $svg.append(s1.get(0).editableAccidentalDOM());
 
@@ -56,21 +68,6 @@ require(['music21'], function() {
             }
         });
     });
-});
 </script>
-<style>
-#svg { background-color: #ffffaa }
-.streamHolding { background-color: #aaffff }
-</style>
-</head>
-<body>
-<div id='svg'></div>
-<div>
-X: <input type="text" name="xLoc" id="xLoc" value="0"/>
-Y: <input type="text" name="yLoc" id="yLoc" value="0"/>
-X-left: <input type="text" name="xOff" id="xOff" value="0"/>
-Y-top: <input type="text" name="yOff" id="yOff" value="0"/>
-
-</div>
 </body>
 </html>
