eslint and fix priorityTarget

--- a/testHTML/demo-Cuthbert.html
+++ b/testHTML/demo-Cuthbert.html
@@ -8,7 +8,7 @@
 
 This was the oldest/first experiment with music21j, from summer 2013.  Updated so it still works.<br/>
 Only for historical nostalgia...
-<form action="">
+<form action="" onsubmit="return false;">
 <input type="button" onclick="playNote(60)" value="clickMe" />
 <input type="button" onclick="refreshMe()" value="playSeventy" /><br />
 <label for="textId">Note/QL</label><input type="text" value="E_2 F_1.5 G_.5 E_2" id="textId" onchange="renderIt()"/>
